# noshell

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  flake.nix
.github/workflows/: release-plz.yml
noshell/: Cargo.toml
noshell-macros/: Cargo.toml
noshell-macros/src/: derive.rs  lib.rs  ty.rs
noshell-macros/src/derive/: tests.rs
noshell-macros/src/derive/snapshots/: noshell_macros__derive__tests__it_should_build_id_lookup_table_with_no_attrs.snap  (+11 more)
noshell-macros/src/snapshots/: noshell_macros__derive__tests__it_should_build_struct_derive.snap
noshell-macros/src/tests/: utils.rs
noshell-parser/: Cargo.toml
noshell-parser/examples/: struct.rs
noshell-parser/src/: lexer.rs  lib.rs  parser.rs
noshell-parser/src/parser/: tests.rs  values.rs
noshell/src/: cmdline.rs  lib.rs  line.rs  tests.rs
noshell/src/cmdline/: lexer.rs  prompt.rs  tests.rs
noshell/src/cmdline/snapshots/: noshell__cmdline__tests__it_should_print_prompt.snap  noshell__cmdline__tests__it_should_read_line@empty.snap  noshell__cmdline__tests__it_should_read_line@multiple.snap  noshell__cmdline__tests__it_should_read_line@newline.snap  noshell__cmdline__tests__it_should_read_line@single.snap
noshell/src/line/: tests.rs
noshell/src/line/snapshots/: noshell__line__tests__it_should_print_prompt.snap  noshell__line__tests__it_should_read_line@empty.snap  noshell__line__tests__it_should_read_line@multiple.snap  noshell__line__tests__it_should_read_line@newline.snap  noshell__line__tests__it_should_read_line@single.snap
noshell/tests/: derived.rs
