[package]
name = "noshell-parser"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
heapless = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
speculoos = "0.13.0"
