[package]
name = "noshell"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[features]
default = []
defmt = ["dep:defmt", "noshell-parser?/defmt"]
events = []
parser = ["dep:noshell-parser"]

[dependencies]
defmt = { workspace = true, optional = true }
futures = { workspace = true }
heapless = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }

noterm = { version = "0.1.1" }

noshell-macros = { path = "../noshell-macros", version = "0.3.0" }
noshell-parser = { path = "../noshell-parser", version = "0.3.0", optional = true }

[dev-dependencies]
insta = "1.46.0"
rstest = "0.26.1"
speculoos = "0.13.0"
tokio = { version = "1.49.0", features = ["full"] }
